--- a/RacingGame2/RacingGame2/RacingGame2.csproj
+++ b/RacingGame2/RacingGame2/RacingGame2.csproj
@@ -50,10 +50,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Drawables\" />
+		<PackageReference Include="SharpHook" Version="4.2.0" />
+		<PackageReference Include="SharpHook.Reactive" Version="4.2.0" />
 	</ItemGroup>
 
 </Project>
