Added NUnit test environment

--- a/RacingGame2/RacingGame2/RacingGame2.csproj
+++ b/RacingGame2/RacingGame2/RacingGame2.csproj
@@ -54,4 +54,8 @@
 		<PackageReference Include="SharpHook.Reactive" Version="4.2.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="RacingGame2.csproj" />
+	</ItemGroup>
+
 </Project>
