--- a/RacingGame2/RacingGame2/RacingGame2.csproj
+++ b/RacingGame2/RacingGame2/RacingGame2.csproj
@@ -83,13 +83,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="GameOverPage.xaml.cs">
+	  <Compile Update="Views\GameOverPage.xaml.cs">
 	    <DependentUpon>GameOverPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="GameOverPage.xaml">
+	  <MauiXaml Update="Views\GameOverPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
